# mev-builders

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  release-plz.toml  stats_output.txt
.github/scripts/: aggregate_stats.py  builder_aggregated.json  check_builder_data_consistency.py  gen_code.py
.github/workflows/: builder-order.yml  ci.yml  release-plz.yml
crates/mev-builders/: Cargo.toml
crates/mev-builders-macros/: Cargo.toml
crates/mev-builders-macros/src/: lib.rs
crates/mev-builders/data/: builders.json  builders_stats.json
crates/mev-builders/src/: lib.rs
crates/mev-builders/src/tools/: consistency_checker.rs  mod.rs  stats_aggregator.rs
data/: builders.json  builders_stats.json
examples/: access_builders.rs  builders_map.rs  list_builders.rs
mev-builders-macros/: CHANGELOG.md  Cargo.toml
mev-builders-macros/src/: lib.rs
src/: builders.rs  lib.rs
