[package]
name = "mev-builders"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "MEV builder endpoints, all in one place"
homepage = "https://github.com/cakevm/mev-builders"
repository = "https://github.com/cakevm/mev-builders"

[dependencies]
mev-builders-macros = { path = "mev-builders-macros" }
