[package]
name = "mev-builders-macros"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macros for mev-builders crate"
homepage = "https://github.com/cakevm/mev-builders"
repository = "https://github.com/cakevm/mev-builders"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
