[package]
name = "mev-builders"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MEV builder endpoints, all in one place"
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
mev-builders-macros.workspace = true

# Optional dependencies for tools
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
chrono = { version = "0.4", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = []
tools = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:chrono", "dep:clap", "dep:anyhow"]

[[bin]]
name = "mev-builders-stats"
required-features = ["tools"]

[[bin]]
name = "mev-builders-check"
required-features = ["tools"]